--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,7 @@ android {
         apt "org.projectlombok:lombok:1.14.8"
         apt "com.google.dagger:dagger-compiler:2.0-SNAPSHOT"
 
-        provided 'org.glassfish:javax.annotation:10.0-b28'
+        provided 'javax.annotation:jsr250-api:1.0'
         provided "org.projectlombok:lombok:1.14.8"
     }
 }
