--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
 
     defaultConfig {
         applicationId "net.grzechocinski.android.dagger2example"
-        minSdkVersion 9
+        minSdkVersion 11
         targetSdkVersion 21
         versionCode 1
         versionName "dev"
@@ -31,9 +31,16 @@ android {
     }
 
     dependencies {
-        compile 'com.android.support:appcompat-v7:21.0.3'
+        compile 'com.android.support:appcompat-v7:22.0.0'
         compile 'com.jakewharton:butterknife:6.1.0'
         compile 'com.google.dagger:dagger:2.0-SNAPSHOT'
+        compile 'com.jakewharton.timber:timber:2.7.1'
+
+        testCompile ('com.squareup.assertj:assertj-android:1.0.0'){
+            exclude group: 'com.android.support', module: 'support-annotations'
+        }
+        testCompile 'junit:junit:4.12'
+        testCompile 'org.mockito:mockito-core:2.0.5-beta'
 
         apt "org.projectlombok:lombok:1.16.2"
         apt "com.google.dagger:dagger-compiler:2.0-SNAPSHOT"
