--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,4 @@
+
 apply plugin: 'com.android.application'
 apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'com.neenbedankt.android-apt'
@@ -33,7 +34,7 @@ android {
     dependencies {
         compile 'com.android.support:appcompat-v7:22.0.0'
         compile 'com.jakewharton:butterknife:6.1.0'
-        compile 'com.google.dagger:dagger:2.0-SNAPSHOT'
+        compile 'com.google.dagger:dagger:2.0'
         compile 'com.jakewharton.timber:timber:2.7.1'
 
         testCompile ('com.squareup.assertj:assertj-android:1.0.0'){
@@ -43,7 +44,7 @@ android {
         testCompile 'org.mockito:mockito-core:2.0.5-beta'
 
         apt "org.projectlombok:lombok:1.16.2"
-        apt "com.google.dagger:dagger-compiler:2.0-SNAPSHOT"
+        apt "com.google.dagger:dagger-compiler:2.0"
 
         provided 'javax.annotation:jsr250-api:1.0'
         provided "org.projectlombok:lombok:1.16.2"
